add images to 40

--- a/content/7-modern-contemporary/40.md
+++ b/content/7-modern-contemporary/40.md
@@ -25,19 +25,23 @@ Single cracks or localized cracks in contemporary paintings on canvas can be dis
 
 ### Curl and Stress Alignment
 
-During curing, paint layers (which are “fatter” layers) attempt to shrink more than ground layers (which are “lean”). If a crack forms, and if the painting is slack, this differential shrinkage curls the painting at the crack, as shown in [**fig. 40.1a**](fig-40-1).
+During curing, paint layers (which are “fatter” layers) attempt to shrink more than ground layers (which are “lean”). If a crack forms, and if the painting is slack, this differential shrinkage curls the painting at the crack, as shown in [fig. 40.1a](#fig-40-1).
 
-By combining equations from geometry with Timoshenko’s equation for curvature of a two-layer laminate ([[Timoshenko 1925]]), we can derive the height of the curl in the paint-ground laminate.[^2] Height depends on the difference in shrinkages, the thickness of the laminate (in this case, paint and ground), and the width (w) of the region that is free to curl. The inset graph of [**fig. 40.1**](fig-40-1) shows cupping height (y-axis) for various laminate thicknesses (x-axis), for paintings where the paint layers are equal to, or not more than a few times thicker than, the ground, and are not especially soft compared to the ground.[^3] Plots are shown for a range of differential shrinkages, with 0.2% as a difference we can expect for an oil paint on a lean ground, whether oil or acrylic.[^4] The blue circle marks the predicted curl for the model paintings in this study. Much larger shrinkages due to severe aging or solvent leaching will drive much larger curl.
+{% figure 'fig-40-1' %}
+
+By combining equations from geometry with Timoshenko’s equation for curvature of a two-layer laminate ([[Timoshenko 1925]]), we can derive the height of the curl in the paint-ground laminate.[^2] Height depends on the difference in shrinkages, the thickness of the laminate (in this case, paint and ground), and the width (w) of the region that is free to curl. The inset graph of [fig. 40.1](#fig-40-1) shows cupping height (y-axis) for various laminate thicknesses (x-axis), for paintings where the paint layers are equal to, or not more than a few times thicker than, the ground, and are not especially soft compared to the ground.[^3] Plots are shown for a range of differential shrinkages, with 0.2% as a difference we can expect for an oil paint on a lean ground, whether oil or acrylic.[^4] The blue circle marks the predicted curl for the model paintings in this study. Much larger shrinkages due to severe aging or solvent leaching will drive much larger curl.
 
 The size layer is not considered in this model for curl (equations for a three-layer system are beyond the scope of this paper). However, one can expect shrinkage of the size layer to counteract shrinkage of the paint layer, especially at low humidities, but in Hough’s measurements of curl in the experimental samples (see Profile Measurement below), curl definitely increased with lower relative humidity (RH) ([[Hough 2000\|, fig. 11]]),[^5] showing that shrinkage of the paint layer dominated shrinkage of the size layer. We can qualify this simple two-layer model for curl, paint-ground, as an estimate of the maximum expected curl.
 
-Where the painting is cracked, the canvas acts as a hinge (see [**fig. 40.1b**](fig-40-1)). Curl is then limited by the surrounding area of painting plus any overall tension in the painting. If the painting is keyed out, the canvas hinge and the cupping are pulled toward flatness, but this flattening reaches a limit when the canvas hinge aligns with the center of the tension located in the size, ground, and paint layers of the uncracked regions.[^6] Cupping cannot be flattened beyond this limit no matter how much tension is applied. This flattening limit h~align~ is equal to at least half the combined thickness of canvas, size, and ground (for low-stiffness paint) and at most half the combined thickness of canvas, size, ground, and paint (for high-stiffness paints). In [**fig. 40.1b**](fig-40-1), the simplest situation has been assumed, where the red line is in the middle of the size-ground-paint laminate.
+Where the painting is cracked, the canvas acts as a hinge (see [fig. 40.1b](#fig-40-1)). Curl is then limited by the surrounding area of painting plus any overall tension in the painting. If the painting is keyed out, the canvas hinge and the cupping are pulled toward flatness, but this flattening reaches a limit when the canvas hinge aligns with the center of the tension located in the size, ground, and paint layers of the uncracked regions.[^6] Cupping cannot be flattened beyond this limit no matter how much tension is applied. This flattening limit h~align~ is equal to at least half the combined thickness of canvas, size, and ground (for low-stiffness paint) and at most half the combined thickness of canvas, size, ground, and paint (for high-stiffness paints). In [fig. 40.1b](#fig-40-1), the simplest situation has been assumed, where the red line is in the middle of the size-ground-paint laminate.
 
 ### Surfacing Mechanisms
 
-If a reinforcement is added to the verso, and the painting has zero tension, then the result of [**fig. 40.2a**](fig-40-2) is plausible. In a painting with some tension (driven by keying out, gravity, or low humidity) the reinforcement will surface with a profile somewhere between the two extremes: a ridge if the reinforcement behaves like a chain (**fig. 40.2b**), or a plateau if the reinforcement behaves like a plate ([**fig. 40.2c**](fig-40-2)). Additional distortions may be superimposed if there is differential swelling or shrinkage driven by heat, plasticizer, solvents, moisture, or an adhesive.
+If a reinforcement is added to the verso, and the painting has zero tension, then the result of [fig. 40.2a](#fig-40-2) is plausible. In a painting with some tension (driven by keying out, gravity, or low humidity) the reinforcement will surface with a profile somewhere between the two extremes: a ridge if the reinforcement behaves like a chain ([fig. 40.2b](#fig-40-2)), or a plateau if the reinforcement behaves like a plate ([fig. 40.2c](#fig-40-2)). Additional distortions may be superimposed if there is differential swelling or shrinkage driven by heat, plasticizer, solvents, moisture, or an adhesive.
 
-The deformations of figures 41.1 and 41.2 are not static; they can only be measured and understood within the framework of viscoelastic mechanics; that is, one must consider time. Large elastic deformations of paints can be accomplished in as little as seconds when high temperature and plasticizer are used, whereas at room temperature, large elastic movements take months or years. On the one hand, trying to bend a paint film quickly at room temperature will fracture it; on the other hand, successfully flattened paint can recover the memory of its old deformation over the course of months and years. (For a theoretical background, see papers in these proceedings by [Hagan](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/41-Hough%20Michalski/paper-2) and by [Daly-Hartin et al.](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/41-Hough%20Michalski/paper-19))
+{% figure 'fig-40-2' %}
+
+The deformations of figures 41.1 and 41.2 are not static; they can only be measured and understood within the framework of viscoelastic mechanics; that is, one must consider time. Large elastic deformations of paints can be accomplished in as little as seconds when high temperature and plasticizer are used, whereas at room temperature, large elastic movements take months or years. On the one hand, trying to bend a paint film quickly at room temperature will fracture it; on the other hand, successfully flattened paint can recover the memory of its old deformation over the course of months and years. (For a theoretical background, see papers in these proceedings by [Hagan](/1-history/2/) and by [Daly-Hartin et al.](/3-open-questions/19/))
 
 To maintain flatness over the years, a reinforcement must stress relax much more slowly than the paint layers. This suggests that one should select either inorganic materials (metal, glass) or highly cross-linked, filled polymers.
 
@@ -69,7 +73,9 @@ After stretching the cotton duck, the perimeter was masked to create a 7.6 cm (
 
 To create multiple uniform cracks, a guillotine-like apparatus was made. The apparatus and painting were kept in a cold room at −5ºC (±2ºC) to ensure brittle, glassy behavior during impact. The painting was placed face down over a narrow trench, and the dull blade was dropped. The amount of indentation was limited by an adjustable stop to avoid plastic deformation. Nine 15 cm (6 in.) cracks were created in each painting, parallel to the short dimension and spaced evenly along the long dimension. Fairly consistent, clean fractures with very little distortion of the canvas were obtained.
 
-The paintings were keyed in to slacken them in the direction perpendicular to the cracks to facilitate curl. They were then heat aged for nineteen days at 41°C to speed any curing and relaxation processes prior to treatment ([**fig. 40.3**](fig-40-3)).
+The paintings were keyed in to slacken them in the direction perpendicular to the cracks to facilitate curl. They were then heat aged for nineteen days at 41°C to speed any curing and relaxation processes prior to treatment ([fig. 40.3](#fig-40-3)).
+
+{% figure 'fig-40-3' %}
 
 ### Experimental Treatments
 
@@ -77,35 +83,37 @@ Of the fourteen local treatments tested, one included moisture and heat alone wi
 
 During treatment, the painting was placed face down, and each crack was held flat for about thirty hours using a purpose-built suction table. For most treatments (2–11), the reinforcement was applied to the crack verso while the crack was held flat under suction. Eight simple suction tables were made to allow multiple treatments to be performed in one day, since pressure needed to be maintained for drying or curing.
 
-All the strips of material used in treatments 4–11 were fabricated so that their thickness was the same (0.50 mm ±0.05 mm). This thickness was fixed by the stainless-steel strips of treatment 4 (0.48 mm). Width varied between 0.64 mm (stainless-steel strips) and 2 mm. Various casting and molding techniques were employed, and a micrometer was used to check thicknesses. Strips 8 and 9 (wet treatments) were molded in situ, with steel strips present as thickness gauges. All strip treatments were applied across the crack verso and were spaced at 3.2 mm (1/8 in.) intervals, with alternating lengths of 25.4 mm and 12.7 mm (1 in., 1/2 in.), except treatment 8. Verso images of some treatments are shown in [**fig. 40.4**](fig-40-4).
+All the strips of material used in treatments 4–11 were fabricated so that their thickness was the same (0.50 mm ±0.05 mm). This thickness was fixed by the stainless-steel strips of treatment 4 (0.48 mm). Width varied between 0.64 mm (stainless-steel strips) and 2 mm. Various casting and molding techniques were employed, and a micrometer was used to check thicknesses. Strips 8 and 9 (wet treatments) were molded in situ, with steel strips present as thickness gauges. All strip treatments were applied across the crack verso and were spaced at 3.2 mm (1/8 in.) intervals, with alternating lengths of 25.4 mm and 12.7 mm (1 in., 1/2 in.), except treatment 8. Verso images of some treatments are shown in [fig. 40.4](#fig-40-4).
+
+{% figure 'fig-40-4' %}
 
 Details of each treatment are as follows. 1. Moisture, heat, and flattening; no reinforcement. Moisture was applied to the crack area at recto using damp, felted Gore-Tex for twenty-four hours, followed by suction from recto and heat from verso.
 
-2\. Acrylic plate, 3.2 mm thick, applied to the canvas over a wide area with 5-minute epoxy. This was a benchmark reinforcement for experimental purposes, not a suggested treatment for paintings.
+1. Acrylic plate, 3.2 mm thick, applied to the canvas over a wide area with 5-minute epoxy. This was a benchmark reinforcement for experimental purposes, not a suggested treatment for paintings.
 
-3\. Epoxy/aluminum foil plate, 50 mm wide, attached with two layers of Beva 371 film.[^7] This was an exploratory treatment designed to test the behavior of very thin aluminum composites and continuous patches.
+2. Epoxy/aluminum foil plate, 50 mm wide, attached with two layers of Beva 371 film.[^7] This was an exploratory treatment designed to test the behavior of very thin aluminum composites and continuous patches.
 
-4\. Individual stainless-steel strips (0.48 mm × 0.64 mm orthodontic “wire” with rectangular cross-section); attached with two layers of Beva 371 film.
+3. Individual stainless-steel strips (0.48 mm × 0.64 mm orthodontic “wire” with rectangular cross-section); attached with two layers of Beva 371 film.
 
-5\. Strips made of Epoweld 3672 epoxy filled with full-length glass filaments (50 µm diameter), oven heated to improve curing of the epoxy; attached with two layers of Beva 371 film.
+4. Strips made of Epoweld 3672 epoxy filled with full-length glass filaments (50 µm diameter), oven heated to improve curing of the epoxy; attached with two layers of Beva 371 film.
 
-6\. Strips made of polyester threads coated with epoxy (Epoweld 3672), oven heated; attached with two layers of Beva 371 film.
+5. Strips made of polyester threads coated with epoxy (Epoweld 3672), oven heated; attached with two layers of Beva 371 film.
 
-7\. Strips made of polyester threads coated with epoxy (Epoweld 3672), allowed to cure at room temperature; attached with two layers of Beva 371 film.
+6. Strips made of polyester threads coated with epoxy (Epoweld 3672), allowed to cure at room temperature; attached with two layers of Beva 371 film.
 
-8\. Strips made of polyester threads coated with epoxy (Epoweld 3672) applied wet to the crack verso. Four variations on thread length and spacing were tried.
+7. Strips made of polyester threads coated with epoxy (Epoweld 3672) applied wet to the crack verso. Four variations on thread length and spacing were tried.
 
-9\. Strips made of polyester thread coated with PVA (Jade 403), applied wet.
+8. Strips made of polyester thread coated with PVA (Jade 403), applied wet.
 
-10\. Beva 371 size (1:1 naphtha) applied to verso of the crack area, 12.7 mm on each side of the crack, and dried for two days. Then a hot aluminum plate was applied, and it was left to cool. Strips from treatment 6 were attached with two layers of Beva 371 film.
+9. Beva 371 size (1:1 naphtha) applied to verso of the crack area, 12.7 mm on each side of the crack, and dried for two days. Then a hot aluminum plate was applied, and it was left to cool. Strips from treatment 6 were attached with two layers of Beva 371 film.
 
-11\. Acryloid B-72 size (20% in xylene) applied to verso of crack area, 12.7 mm on each side of the crack, and dried for two days. Then a hot aluminum plate was applied, and it was left to cool. Strips from treatment 6 were attached with two layers of Beva 371 film.
+10. Acryloid B-72 size (20% in xylene) applied to verso of crack area, 12.7 mm on each side of the crack, and dried for two days. Then a hot aluminum plate was applied, and it was left to cool. Strips from treatment 6 were attached with two layers of Beva 371 film.
 
-12\. Beva 371 size (1:1 naphtha) applied to verso of crack area, 12.7 mm on each side of the crack, and dried for two days. Then a hot aluminum plate was applied, and it was left to cool. No reinforcement.
+11. Beva 371 size (1:1 naphtha) applied to verso of crack area, 12.7 mm on each side of the crack, and dried for two days. Then a hot aluminum plate was applied, and it was left to cool. No reinforcement.
 
-13\. Acryloid B-72 size (20% in xylene) applied to verso of crack area, 12.7 mm on each side of the crack, and dried for two days. Then a hot aluminum plate was applied, and it was left to cool. No reinforcement.
+12. Acryloid B-72 size (20% in xylene) applied to verso of crack area, 12.7 mm on each side of the crack, and dried for two days. Then a hot aluminum plate was applied, and it was left to cool. No reinforcement.
 
-14\. Epoxy (EPO-TEK 301) flowed into the crack from the recto to adhere the two fracture faces in a butt joint. Unlike in treatments 1–13, suction was applied from the verso by a Mitka suction table with the painting face up. Then a hard, flat weight was applied over the crack area for twenty-four hours.
+13. Epoxy (EPO-TEK 301) flowed into the crack from the recto to adhere the two fracture faces in a butt joint. Unlike in treatments 1–13, suction was applied from the verso by a Mitka suction table with the painting face up. Then a hard, flat weight was applied over the crack area for twenty-four hours.
 
 ### Profile Measurement
 
@@ -115,43 +123,53 @@ For further information on the experimental methods and materials, and initial r
 
 ### Taut Painting Condition
 
-A year after the first stage of the project ended, three paintings that contained at least one of almost all the treatments were keyed out in order to study the taut condition where cupping is driven by stress alignment rather than curl, and to study the tendency of the repairs to surface. To ensure reproducible movement, a central crossbar was added to the long dimension, with adjustable turnbuckles that controlled tension perpendicular to the cracks ([**fig. 40.5**](fig-40-5)). The arrangement of the nine cracks all in a row ensured that even if carefully calibrated keying out did not yield exactly the same tension across all paintings, at least within each painting, samples would be subject to equal tension and could be compared directly and reliably.
+A year after the first stage of the project ended, three paintings that contained at least one of almost all the treatments were keyed out in order to study the taut condition where cupping is driven by stress alignment rather than curl, and to study the tendency of the repairs to surface. To ensure reproducible movement, a central crossbar was added to the long dimension, with adjustable turnbuckles that controlled tension perpendicular to the cracks ([fig. 40.5](#fig-40-5)). The arrangement of the nine cracks all in a row ensured that even if carefully calibrated keying out did not yield exactly the same tension across all paintings, at least within each painting, samples would be subject to equal tension and could be compared directly and reliably.
+
+{% figure 'fig-40-5' %}
 
 ## Results
 
-Results for each treatment are summarized in [**table 40.1**](table-40-1), and presented visually in [**figs. 40.6**](fig-40-6) and [**40.7**](fig-40-7). Cupping heights over time for all treatments are plotted in [**fig. 40.8**](fig-40-8). Here, only the highlights are noted, with further detail provided in the Discussion section.
+Results for each treatment are summarized in [table 40.1](#table-40-1), and presented visually in [figs. 40.6](#fig-40-6) and [40.7](#fig-40-7). Cupping heights over time for all treatments are plotted in [fig. 40.8](#fig-40-8). Here, only the highlights are noted, with further detail provided in the Discussion section.
+
+**table 'table-40-1'**
+
+{% figure 'fig-40-6' %}
+
+{% figure 'fig-40-7' %}
+
+{% figure 'fig-40-8' %}
 
 During the early monitoring of the cracked model paintings, prior to any treatment, cupping increased after the tension was released, exceeding the painting’s half thickness, thus confirming curl as the dominant driving force ([[Hough and Michalski 1999\|, fig. 7]]).
 
 After the first seventy days, before any keying out, only three of the treatments (4, 5, 6) were successful in terms of visual appearance—rigid enough to hold the cupping down and insubstantial enough not to create new distortions.
 
-After twenty-one years of being slack, only 4 and 5 remained visually acceptable, and no surfacing was present (see [**fig. 40.7**](fig-40-7), top row).
+After twenty-one years of being slack, only 4 and 5 remained visually acceptable, and no surfacing was present (see [fig. 40.7](#fig-40-7), top row).
 
-After twenty years of being taut (keyed out), many treatments showed pronounced ridge surfacing (see [**fig. 40.7**](fig-40-7), bottom row). Only 4 was successful: it held the cupping almost flat but did not provoke plateau surfacing. One of the treatment 4 samples is shown in [**fig. 40.6**](fig-40-6), alongside other treatments as well as untreated cracks within a single painting.
+After twenty years of being taut (keyed out), many treatments showed pronounced ridge surfacing (see [fig. 40.7](#fig-40-7), bottom row). Only 4 was successful: it held the cupping almost flat but did not provoke plateau surfacing. One of the treatment 4 samples is shown in [fig. 40.6](#fig-40-6), alongside other treatments as well as untreated cracks within a single painting.
 
-For treatment 8, the epoxy was allowed to set up for a period before the suction was turned on. Despite this time allowance, the suction pulled the epoxy into the crack face, partially closing the crack and holding it flat intermittently—resulting in a partial (inadvertent) butt joint. This is visible when raking light comes from above, as in [**fig. 40.7**](fig-40-7), bottom row: the crack has a stitched appearance and a comb-like shadow.
+For treatment 8, the epoxy was allowed to set up for a period before the suction was turned on. Despite this time allowance, the suction pulled the epoxy into the crack face, partially closing the crack and holding it flat intermittently—resulting in a partial (inadvertent) butt joint. This is visible when raking light comes from above, as in [fig. 40.7](#fig-40-7), bottom row: the crack has a stitched appearance and a comb-like shadow.
 
-The cupping in the untreated cracks reached heights of \~0.7 mm in the slack paintings. In the keyed out paintings the cupping reached only \~0.51 mm, less than in the slack paintings, as expected (see [**fig. 40.1**](fig-40-1)). On the verso, the canvas has followed the curling paint layers. No delamination was noticed in any of the samples.
+The cupping in the untreated cracks reached heights of \~0.7 mm in the slack paintings. In the keyed out paintings the cupping reached only \~0.51 mm, less than in the slack paintings, as expected (see [fig. 40.1](#fig-40-1)). On the verso, the canvas has followed the curling paint layers. No delamination was noticed in any of the samples.
 
 ## Discussion
 
 ### The Final States of Treatments after Twenty-One Years
 
-In terms of the predictions of curl (see [**fig. 40.1a**](fig-40-1)), given the \~0.38 mm thickness of paint and ground for the model painting, assuming a region for unrestrained curl about 20 mm wide on each side of the cracks, and assuming the shrinkage differential between oil paint and acrylic ground of \~0.2% estimated earlier, places the blue circle in the inset graph of [**fig. 40.1**](fig-40-1), predicting a cupping height of \~1.6 mm. The average cupping height of untreated cracks in slack paintings, 0.68 mm, is less than half of this estimate, implying either that the estimate of shrinkage is too high or, more likely, that the canvas hinge (and perhaps the size) is restraining curl.
+In terms of the predictions of curl (see [fig. 40.1a](#fig-40-1)), given the \~0.38 mm thickness of paint and ground for the model painting, assuming a region for unrestrained curl about 20 mm wide on each side of the cracks, and assuming the shrinkage differential between oil paint and acrylic ground of \~0.2% estimated earlier, places the blue circle in the inset graph of [fig. 40.1](#fig-40-1), predicting a cupping height of \~1.6 mm. The average cupping height of untreated cracks in slack paintings, 0.68 mm, is less than half of this estimate, implying either that the estimate of shrinkage is too high or, more likely, that the canvas hinge (and perhaps the size) is restraining curl.
 
-In terms of the predictions of stress alignment without reinforcements (see [**fig. 40.1b**](fig-40-1)), given the thickness of the paint and ground, \~0.38 mm, and the canvas thickness of \~0.76 mm, then by the equation of [**fig. 40.1b**](fig-40-1), we expect untreated, heat/moisture-treated, or size-treated cracks to have cupping height of \~0.57 mm. Untreated cracks in taut paintings (three samples) reached 0.51 ±0.02 mm. If we estimate that half the ground sank into the canvas weave, then the prediction falls to \~0.52 mm, as observed. The cupping of heat/moisture treatment (1) reached 0.45 mm, 12% lower than untreated cracks, while size treatments (12, 13) reached 0.35 mm, 31% lower.
+In terms of the predictions of stress alignment without reinforcements (see [fig. 40.1b](#fig-40-1)), given the thickness of the paint and ground, \~0.38 mm, and the canvas thickness of \~0.76 mm, then by the equation of [fig. 40.1b](#fig-40-1), we expect untreated, heat/moisture-treated, or size-treated cracks to have cupping height of \~0.57 mm. Untreated cracks in taut paintings (three samples) reached 0.51 ±0.02 mm. If we estimate that half the ground sank into the canvas weave, then the prediction falls to \~0.52 mm, as observed. The cupping of heat/moisture treatment (1) reached 0.45 mm, 12% lower than untreated cracks, while size treatments (12, 13) reached 0.35 mm, 31% lower.
 
-Keying out created ridge-shaped surfacing in all treatments that used reinforcements, except treatment 4, the steel; that is, all polymer reinforcements and the glass bundles embedded in a polymer bent at the crack, thus creating a ridge, as shown in [**fig. 40.2b**](fig-40-2). Keying out generated consistent ridging heights: worsening treatments that did well when slack (except treatment 4), while improving treatments that had maximum curl when slack.
+Keying out created ridge-shaped surfacing in all treatments that used reinforcements, except treatment 4, the steel; that is, all polymer reinforcements and the glass bundles embedded in a polymer bent at the crack, thus creating a ridge, as shown in [fig. 40.2b](#fig-40-2). Keying out generated consistent ridging heights: worsening treatments that did well when slack (except treatment 4), while improving treatments that had maximum curl when slack.
 
 Both the ridge surfacing caused by reinforcements under tension and the moating[^8] caused by size treatments, were precisely aligned with their location on the back of the canvas. There was no complex extension of visible deformation beyond the boundaries of the verso treatment.
 
-In terms of the predictions of surfacing of reinforcements (see **[figs. 40.2b](fig-40-2) and [40.2c](fig-40-2)**), given the thickness of all reinforcements of 0.50 ±0.05 mm, and the paint, ground, and canvas thicknesses specified earlier, we expect the height of surfacing to be \~1.2 mm (only ridge surfacing was observed). Heights for reinforced treatments using polymers (6, 8) ranged between 0.35 mm and 0.30 mm, respectively (see [**fig. 40.8**](fig-40-8), top right). The glass fiber reinforcement (5), while successful in a slack painting, surfaced as much as the polymer reinforcements when taut: 0.35 mm. None of the ridge surfacing of reinforcements reached the prediction of stress alignment; all remained at or below 0.45 mm, about a third of our prediction. This suggests that the treatments, although visually unacceptable, had functioned to some extent as intended. From another perspective, it suggests that the tension applied by the keying out was not severe enough to achieve maximum surfacing.
+In terms of the predictions of surfacing of reinforcements (see [figs. 40.2b](#fig-40-2) and [40.2c](#fig-40-2)), given the thickness of all reinforcements of 0.50 ±0.05 mm, and the paint, ground, and canvas thicknesses specified earlier, we expect the height of surfacing to be \~1.2 mm (only ridge surfacing was observed). Heights for reinforced treatments using polymers (6, 8) ranged between 0.35 mm and 0.30 mm, respectively (see [fig. 40.8](#fig-40-8), top right). The glass fiber reinforcement (5), while successful in a slack painting, surfaced as much as the polymer reinforcements when taut: 0.35 mm. None of the ridge surfacing of reinforcements reached the prediction of stress alignment; all remained at or below 0.45 mm, about a third of our prediction. This suggests that the treatments, although visually unacceptable, had functioned to some extent as intended. From another perspective, it suggests that the tension applied by the keying out was not severe enough to achieve maximum surfacing.
 
-Only one mystery remained: since the stainless-steel strips, treatment 4, did not bend at the crack, why did they not surface as a plateau instead? The simplest answer is that the amount of tension we provided by keying out was not enough to bend the paint and ground into the S shape required at each edge of the surfacing plateau of [**fig. 40.2c**](fig-40-2). This is consistent with the conclusion that the tension in the keyed-out paintings, while enough to drive some ridge surfacing of polymer reinforcements, was not enough to drive the maximum predicted. In other words, the keyed-out paintings were tight enough to cause ridge surfacing of flexible reinforcements, but not sufficient to cause noticeable plateau surfacing. Unfortunately, the raking light measurement method did not show small, gradual profile changes that more sensitive scanning might have detected. Perhaps our expectations of plateau surfacing were biased by observation of old patches that employed generous amounts of glue. These generate huge forces during low humidity, independently of keying out, and are much thicker than the reinforcements we used.
+Only one mystery remained: since the stainless-steel strips, treatment 4, did not bend at the crack, why did they not surface as a plateau instead? The simplest answer is that the amount of tension we provided by keying out was not enough to bend the paint and ground into the S shape required at each edge of the surfacing plateau of [fig. 40.2c](#fig-40-2). This is consistent with the conclusion that the tension in the keyed-out paintings, while enough to drive some ridge surfacing of polymer reinforcements, was not enough to drive the maximum predicted. In other words, the keyed-out paintings were tight enough to cause ridge surfacing of flexible reinforcements, but not sufficient to cause noticeable plateau surfacing. Unfortunately, the raking light measurement method did not show small, gradual profile changes that more sensitive scanning might have detected. Perhaps our expectations of plateau surfacing were biased by observation of old patches that employed generous amounts of glue. These generate huge forces during low humidity, independently of keying out, and are much thicker than the reinforcements we used.
 
 ### The Viscoelastic Response over Time
 
-In the left graph of [**fig. 40.8**](fig-40-8), we can follow the viscoelastic behavior of the treatments that were never keyed out, starting at 5 minutes after they were released from the suction table up to 21 years later. This type of graph—the logarithm of an elastic measurement versus the logarithm of time (a log-log plot)—is conventional in viscoelastic studies of polymers, because it can be placed in the context of master curves, as described elsewhere in these proceedings by [Daly Hartin et al.](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/41-Hough%20Michalski/paper-19) and [Hagan](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/41-Hough%20Michalski/paper-2). The heavy gray line at top left of [**fig. 40.8**](fig-40-8) shows the slope of the master curve for stress relaxation of oil paintings measured by Daly Hartin et al. for the range of 5 minutes to 100 years, which was 1/13, that is, 1 log unit in height for each 13 log units of time.[^9] The overall slope of the treatments that failed (that allowed the cupping to return) is similar to this slope. Even sized samples with a rapid increase in cupping in the first few hours followed by a striking decrease that lasted several months (treatments 10, 11, 12, 13), did return over the years to an overall slope of \~1/13, if one simply considers the first and last data points.
+In the left graph of [fig. 40.8](#fig-40-8), we can follow the viscoelastic behavior of the treatments that were never keyed out, starting at 5 minutes after they were released from the suction table up to 21 years later. This type of graph—the logarithm of an elastic measurement versus the logarithm of time (a log-log plot)—is conventional in viscoelastic studies of polymers, because it can be placed in the context of master curves, as described elsewhere in these proceedings by [Daly Hartin et al.](/3-open-questions/19/) and [Hagan](/1-history/2/). The heavy gray line at top left of [fig. 40.8](#fig-40-8) shows the slope of the master curve for stress relaxation of oil paintings measured by Daly Hartin et al. for the range of 5 minutes to 100 years, which was 1/13, that is, 1 log unit in height for each 13 log units of time.[^9] The overall slope of the treatments that failed (that allowed the cupping to return) is similar to this slope. Even sized samples with a rapid increase in cupping in the first few hours followed by a striking decrease that lasted several months (treatments 10, 11, 12, 13), did return over the years to an overall slope of \~1/13, if one simply considers the first and last data points.
 
 Treatment 1 (heat and moisture) also shows a small wobble in its plot, though not as pronounced as that of the sizes. This plateau between a few days and a few months led us to believe in our 1999 paper that this was a final plateau, but over the last twenty-one years, it has returned to its initial rate of climb and reaches just short of completely untreated cracks.
 
@@ -175,9 +193,6 @@ Our conclusions fall into two categories: those that have practical ramification
 
 -   Surfacing of local reinforcements is driven by tension in the painting. Ridge surfacing of flexible reinforcements occurs at lower tension than plateau surfacing of rigid reinforcements (assuming paintings with similar structure to our model painting, or those with even thicker paints or grounds).
 
-```{=html}
-<!-- -->
-```
 -   Keeping the first two conclusions in mind, good results are possible if the reinforcement, such as metal, does not stress relax, if it is thin, such as very thin stainless-steel strips (treatment 4), if it is spaced and feathered, and finally, if the painting is under only moderate tension.
 
 -   The neatest theoretical solution to both cupping and surfacing would be to adhere the fracture faces in a butt joint. Treatment 14 showed moderately good control of cupping. This treatment may eventually fail, but at least it will never surface. For this reason alone, more study of this option is warranted.
@@ -202,9 +217,9 @@ Our conclusions fall into two categories: those that have practical ramification
 
 [^1]: *Surfacing* refers to the development at the surface of a painting of a deformation that corresponds to the shape of a local repair applied to the verso of the painting, such as a patch.
 
-[^2]: Timoshenko derived the curvature of any two-layer laminate with differential shrinkage. If the differential shrinkage is (ε~1−~ε~2~), m is the ratio of the two thicknesses, n is the ratio of the two moduli of elasticity, and t is the laminate thickness, then radius of curvature is R=(t\*(3\*(1+m)\^2+(1+m\*n)\*(m\^2+1/(m\*n))))/(6\*(ε~1−~ε~2~)\*(1+m)\^2). The height h of the arc over a base of w and curvature R is h=R-(R\^2-w\^2). See [[https://www.mathopenref.com/sagitta.html](about:blank).]{.underline}
+[^2]: Timoshenko derived the curvature of any two-layer laminate with differential shrinkage. If the differential shrinkage is (ε~1−~ε~2~), m is the ratio of the two thicknesses, n is the ratio of the two moduli of elasticity, and t is the laminate thickness, then radius of curvature is R=(t\*(3\*(1+m)\^2+(1+m\*n)\*(m\^2+1/(m\*n))))/(6\*(ε~1−~ε~2~)\*(1+m)\^2). The height h of the arc over a base of w and curvature R is h=R-(R\^2-w\^2). See [https://www.mathopenref.com/sagitta.html](https://www.mathopenref.com/sagitta.html).
 
-[^3]: Given initial values of m=n=1 (see previous note) a plot of h stays within 25% of initial value despite changes in thickness ratio, n, by a factor of 3, or changes in elasticity ratio, m, by a factor of 7. Heavy impasto, or paints known to be soft, such as poor driers, will need the full equation, rather than the graph of [**fig. 40.1**](fig-40-1).
+[^3]: Given initial values of m=n=1 (see previous note) a plot of h stays within 25% of initial value despite changes in thickness ratio, n, by a factor of 3, or changes in elasticity ratio, m, by a factor of 7. Heavy impasto, or paints known to be soft, such as poor driers, will need the full equation, rather than the graph of [fig. 40.1](#fig-40-1).
 
 [^4]: Curing shrinkage of linseed oil was suggested as a contributor to paint failure as early as 1929 ([[Clark and Tschentke 1929]]). Pure medium with driers, cured in the dark, shrank 1% to 1.6% by volume, so 0.3%–0.5% in length. A paint of 35% pigment volume concentration (PVC) would experience \~65% of pure oil values, so \~0.2–0.3%. A ground at critical PVC would shrink negligibly in comparison. Browne reported dimensional change for films of linseed oil paints after they were released from the casting substrate and exposed to cycles of high relative humidity ([[Browne 1955]]). Michalski plotted the nonrecoverable shrinkage from Browne’s data: \~0.3% for an oil paint of 30% PVC, consistent with Clark and Tschentke ([[Michalski 1991\|, n25]]).
 
@@ -218,4 +233,4 @@ Our conclusions fall into two categories: those that have practical ramification
 
 [^9]: The slope of the stress relaxation is actually negative 1/13, the mirror image of the +1/13 of creeping of cupping.
 
-[^10]: There is no “immediate” time zero in viscoelasticity; the springback would have occurred during several milliseconds as the suction pressure decreased, and with the correct tools, one could have measured cupping heights growing from those milliseconds forward to our first data point at five minutes. Milliseconds would enter the glassy plateau shown by [Daly Hartin et al.](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/41-Hough%20Michalski/paper-19) for millisecond events.
+[^10]: There is no “immediate” time zero in viscoelasticity; the springback would have occurred during several milliseconds as the suction pressure decreased, and with the correct tools, one could have measured cupping heights growing from those milliseconds forward to our first data point at five minutes. Milliseconds would enter the glassy plateau shown by [Daly Hartin et al.](/3-open-questions/19/) for millisecond events.
