--- a/content/8-posters/52.md
+++ b/content/8-posters/52.md
@@ -54,7 +54,9 @@ Several objectives guided the structural treatment of Titian’s *Europa*. The o
 
 The structural treatment was executed in two stages: the first involved stabilization of the original canvas and lining canvas and reinforcement of the lining support; the second comprised the restretching of the painting and implementation of a blind-panel stretcher and loose-lining fabric support.
 
-The first stage included readhering the detached areas of lining fabric, removing the canvas from the unstable strainer, and adjusting the seam allowance of the loose-lining so that it would not impart an impression onto the painted surface. The second stage involved constructing a blind panel stretcher and installing the loose-lining. The custom blind-panel design would replace the structurally weak strainer and add stability and resistance to mechanical stresses by providing additional support ([**fig. 52.1**](fig-52-1)). Complete restriction of the painted canvas was avoided by using the loose-lining technique to provide a gentle nap bond. Preventive measures were also taken by reducing excessive tensioning during restretching to ensure the picture plane remained unaltered. Following structural treatment, comprehensive technical analyses were executed, and continued conservation work, such as varnish removal, retouching, and revarnishing were performed.
+The first stage included readhering the detached areas of lining fabric, removing the canvas from the unstable strainer, and adjusting the seam allowance of the loose-lining so that it would not impart an impression onto the painted surface. The second stage involved constructing a blind panel stretcher and installing the loose-lining. The custom blind-panel design would replace the structurally weak strainer and add stability and resistance to mechanical stresses by providing additional support ([fig. 52.1](#fig-52-1)). Complete restriction of the painted canvas was avoided by using the loose-lining technique to provide a gentle nap bond. Preventive measures were also taken by reducing excessive tensioning during restretching to ensure the picture plane remained unaltered. Following structural treatment, comprehensive technical analyses were executed, and continued conservation work, such as varnish removal, retouching, and revarnishing were performed.
+
+{% figure 'fig-52-1' %}
 
 ## Structural Treatment
 
@@ -64,17 +66,25 @@ The painting, laid face down on a smooth table surface, was separated from the s
 
 To prevent distortions from imprinting to the pictorial face, textural aberrations in the historic lining fabric were reduced. This included minor slubs and embedded debris, as well as leveling of the 1/2 inch-wide seam allowance of the lining canvas using a scalpel. Minor gaps between the two lining canvases were reinforced to prevent separation of the seam. Linen fibers, flocked for compacting power, were saturated with an adhesive paste of rabbit-skin glue, wheat-starch paste, and Klucel G (6:4:1) and applied along the entire seam. The flock reinforcements were weighted under blotters for ten minutes and then ironed with mild heat and pressure until the seam was smooth and dry. 
 
-Strips of Belgian linen were prepared for strip-lining with Beva Film ([**fig. 52.2**](fig-52-2)). To stiffen and prevent distortion of the turnover edge, 1 1/2 inch strips of polyester sailcloth were adhered to the inner side of the strip lining with Beva Film aligned with the tacking margin.
+Strips of Belgian linen were prepared for strip-lining with Beva Film ([fig. 52.2](#fig-52-2)). To stiffen and prevent distortion of the turnover edge, 1 1/2 inch strips of polyester sailcloth were adhered to the inner side of the strip lining with Beva Film aligned with the tacking margin.
+
+{% figure 'fig-52-2' %}
 
 With the painting face down, the 4-inch buckle at the upper left corner and a few small areas along the border juncture of original canvas and lining canvas were readhered. The same glue-paste-Klucel adhesive mixture used to reinforce the seam allowance was fed into the delamination pockets (humidified with atomized water) with brush and microspatula, and then set down with gentle heat applied with a tacking iron through Remay cloth and blotters and weighted until dry.
 
 ### Part 2: Blind Panel Stretcher + Loose-Lining Hybrid Treatment
 
-The new stretcher, reinforced with four cross-braces (two horizontal, two vertical), was custom fabricated by Upper Canada Stretchers to receive interlocking blind-panel inserts to create a flush, rigid surface for the painting’s pictorial plane ([**fig. 52.3**](fig-52-3)). Along the inner surface of each 3-inch stretcher bar, a 1 inch wide x 1/2 inch deep recess was cut into the wood, along with a 5/8 inch deep kerf that followed flush along this recess ([**fig. 52.4**](fig-52-4)). This would allow for the panel inserts to interlock tightly within the stretcher bar system, ensuring a level, immobile support. 
+The new stretcher, reinforced with four cross-braces (two horizontal, two vertical), was custom fabricated by Upper Canada Stretchers to receive interlocking blind-panel inserts to create a flush, rigid surface for the painting’s pictorial plane ([fig. 52.3](#fig-52-3)). Along the inner surface of each 3-inch stretcher bar, a 1 inch wide x 1/2 inch deep recess was cut into the wood, along with a 5/8 inch deep kerf that followed flush along this recess ([fig. 52.4](#fig-52-4)). This would allow for the panel inserts to interlock tightly within the stretcher bar system, ensuring a level, immobile support. 
 
-The blind panel inserts, constructed from three sections of Gator Board, were cut to fit in the stretcher recess and prepared with acrylic gesso medium to prevent migration of any degradation byproducts. Then 1/2 x 1/2 inch sections of laminate surface and foam were cut away from the outer borders of each panel, leaving the bottom skin of the board protruding to lock into the kerf cut of the stretcher bar (see [**fig. 52.4**](fig-52-4)). After the insert panels were locked into place, each panel was secured to the cross members with wood screws, and each screw location was covered with a thin patch of polyester fabric adhered with Beva Film.
+{% figure 'fig-52-3' %}
 
-Belgian linen was stretched over the blind panel stretcher and attached with staples secured along the turnover edges followed by securing the strip lining edges with pushpins to align the painting (see [**fig. 52.3**](fig-52-3)). The painting was stretched over the loose-lining and attached with staples secured to the strip-lining fabric. This was accomplished with the painting face up, supported by sawhorses, and executed by two people working in tandem ([**fig. 52.5**](fig-52-5)). The rigid support prevented sagging of the original canvas because it was fully supported and in plane while it was being stretched in the horizontal position. Therefore, only minimal tensioning of the painting was needed, as the strip-lined edges were attached to the stretcher. In addition, the loose-lining provided some cushioned support between the old lining canvas and the rigid blind-panel stretcher support. The rigid panel inserts also serve as the kind of inherent protection system typically provided by backing boards.
+{% figure 'fig-52-4' %}
+
+The blind panel inserts, constructed from three sections of Gator Board, were cut to fit in the stretcher recess and prepared with acrylic gesso medium to prevent migration of any degradation byproducts. Then 1/2 x 1/2 inch sections of laminate surface and foam were cut away from the outer borders of each panel, leaving the bottom skin of the board protruding to lock into the kerf cut of the stretcher bar (see [fig. 52.4](#fig-52-4)). After the insert panels were locked into place, each panel was secured to the cross members with wood screws, and each screw location was covered with a thin patch of polyester fabric adhered with Beva Film.
+
+Belgian linen was stretched over the blind panel stretcher and attached with staples secured along the turnover edges followed by securing the strip lining edges with pushpins to align the painting (see [fig. 52.3](#fig-52-3)). The painting was stretched over the loose-lining and attached with staples secured to the strip-lining fabric. This was accomplished with the painting face up, supported by sawhorses, and executed by two people working in tandem ([fig. 52.5](#fig-52-5)). The rigid support prevented sagging of the original canvas because it was fully supported and in plane while it was being stretched in the horizontal position. Therefore, only minimal tensioning of the painting was needed, as the strip-lined edges were attached to the stretcher. In addition, the loose-lining provided some cushioned support between the old lining canvas and the rigid blind-panel stretcher support. The rigid panel inserts also serve as the kind of inherent protection system typically provided by backing boards.
+
+{% figure 'fig-52-5' %}
 
 ## Reflections
 
